delete lesson method update